<resources>
    <string name="app_name">PayFever</string>
    <string name="contact_avatar">Contact avatar</string>
    <string name="contact_invite">INVITE</string>
    <string name="contact_skip">SKIP</string>
    <string name="app_contact_select_all">Select All</string>
    <string name="app_contact_skip_dialog_title">Are you sure?</string>
    <string name="app_contact_skip_dialog_message">You don\'t want to expand your Network? Without Network, you can\'t make more money!</string>
    <string name="app_contact_dialog_earn_more">EARN MORE</string>
    <string name="send_sms_title_CA">Alert</string>
    <string name="send_sms_body_CA">An SMS invitation will be sent to the selected Contacts</string>
    <string name="send_sms_ok_CA">OK</string>
    <string name="send_sms_cancel_CA">Cancel</string>

    <!--Register-->
    <string name="user_name_FR">User name</string>
    <string name="number_FR">Phone number</string>
    <string name="password_FR">Password</string>
    <string name="register_FR">Register</string>
    <string name="user_name_error_FR">User name is required!</string>
    <string name="number_error_FR">Phone number is not correct!</string>
    <string name="password_error_FR">Password is not correct!</string>
    <string name="log_in_btn_FR">Log In</string>

    <!--LogIn-->
    <string name="log_in_title_FLI">Log in</string>
    <string name="log_in_btn_FLI">Log In</string>
    <string name="log_in_process_FLI">Log in....</string>

    <!--MyNetwork-->
    <string name="network_fragment_title_HMN">My Network Account</string>
    <string name="direct_sent_HMN">Direct sent out:</string>
    <string name="pending_HMN">Pending:</string>
    <string name="expired_HMN">Expired:</string>
    <string name="first_level_HMN">1st level</string>
    <string name="total_HMN">Total Network Accepts</string>
    <string name="first_level_accepts_HMN">1st Level Accepts</string>
    <string name="network_level_accepts_HMN">Network Level Accepts</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_item_my_network">My Network</string>
    <string name="drawer_item_balance">Balance</string>
    <string name="drawer_item_pay_chat">Pay Chat</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_pay_tone">Pay Tone</string>
    <string name="check_permission">To get contacts you need turn on read contacts permission</string>

    <!--TermsAndConditions-->
    <string name="terms_and_conditions">T &amp; C</string>
    <string name="terms_and_conditions_text">Something clicked in Kiev. This was more like the effective Chelsea from the latter stages of last season, when attacking threat was allied to the required work-rate and defensive nous. The likes of Eden Hazard and Nemanja Matic, so off-colour up to now, reacted to’s recent criticisms and were recognisable against Dynamo as the talents of last term, with each conjuring their most convincing displays of the campaign to date. Here was evidence methods are sparking a response, with the last four days having now yielded successive clean sheets for the first time since mid-April.
        Porto top Champions League Group G after victory over Maccabi Tel Aviv Read more The teams destiny in Group G remains in their own hands, and there will be confidence the remaining home fixtures can be won, together with the trip to the whipping boys Maccabi Tel Aviv, to smooth passage into the knockout phase. The sense of satisfaction obtained here, though, should maintain the optimism generated fros welcome win over Aston Villa. said Mourinho. We are recovering some of that compactness, solidarity, effort, tactical discipline, qualities which are very important when you are not flying or playing with that confidence or flair, when your attacking players are not killing [opponents]. So in three days, two solid performances are good for us
        There was, inevitably, one gripe that needed to be aired. The game had edged just beyond the quarter-hour mark when Cesc Fàbregas wriggled into the penalty area and was clipped by Serhiy Rybalka, only for the Slovenian official, Damir Skomina, to wave away the appeals for a spot-kick.</string>

    <!--AboutUs-->
    <string name="about_us_AU">The social network that\'s unleashing Smart Tech and Rewards Programs to automatically make you money - especially with that Supercomputer already in your hand.\n\n
        Making money is a universal common denominator and PayFever is the communicator.\n\n
        It\'s all about the money - Trump, Kanye, Kim, Shark Tank, Fantasy Games, Billionaires, Royalty, Russians, Chinese, Indians, Entitlement and Passive Income.
        Money Making Machines – Smart computers and artificial intelligence already make Wall Street big money and they’re coming to Main Street and a Smartphone near you.\n\n
        They won\’t take over your job and you won’t fear for your life… they’ll be your job and you\'ll love your life.  They will work tirelessly to make you money.\n\n
        Like with everything popular though, demand will outstrip supply. The lines to turn your Smart Device into a “PayMachine” won’t be around the block… they’ll be around the planet.\n\n
        So... Sign up for PayFever today and get others signed up under you before they sign you up under them.\n\n
    </string>
    <string name="about_us_title_AU">About us</string>

    <!--ChatList-->
    <string name="chat_list_title">Chat List</string>
</resources>
