<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/register_edge_margin"
        android:paddingRight="@dimen/register_edge_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="PayFever"/>

        <View style="@style/LogoUnderline"/>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutPreReg"
            android:layout_marginTop="@dimen/register_top_margin">

            <EditText
                android:id="@+id/etUserName_FR"
                style="@style/EditTextPreReg"
                android:hint="@string/user_name_FR"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutPreReg">

            <EditText
                android:id="@+id/etPhoneNumber_FR"
                style="@style/EditTextPreReg"
                android:inputType="phone"
                android:hint="@string/number_FR"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutPreReg">

            <EditText
                android:id="@+id/etPassword_FR"
                style="@style/EditTextPreReg"
                android:inputType="textPassword"
                android:hint="@string/password_FR"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvRegister_FR"
            style="@style/RegisterBtn"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/register_top_margin"
            android:text="@string/register_FR"
            android:background="@drawable/invite_rounded_selector"
            tools:text="Register"/>

        <TextView
            android:id="@+id/tvLogIn_FR"
            style="@style/RegisterBtn"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/selector_log_in"
            android:text="@string/log_in_btn_FR"
            tools:text="LogIn"/>

    </LinearLayout>

</ScrollView>