<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/register_edge_margin"
        android:layout_marginRight="@dimen/register_edge_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/colorAccent"
            android:text="PayFever" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/logo_underline_margin"
            android:background="@color/colorAccent"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:layout_marginTop="@dimen/register_top_margin">

            <EditText
                android:id="@+id/etUserName_FLI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/user_name_FR"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/etPassword_FLI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/password_FR"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvLogIn_FLI"
            style="@style/RegisterBtn"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/register_top_margin"
            android:text="@string/log_in_btn_FLI"
            android:background="@drawable/selector_log_in"
            tools:text="Log In"/>

    </LinearLayout>

</ScrollView>